--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     </section>
     <section id="input-area">
+      <form>
+        <input type="text" value="Hip Hop Artists">
+        <input type="submit" value="Search Giphy">
+      </form>
     </section>
     <section id="results">
 
