just about done. need to do Css and comments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     <section id="input-area">
       <form>
-        <input type="text" value="Hip Hop Artists">
+        <input id="input-text" type="text" value="Hip Hop Artists">
         <input type="submit" value="Search Giphy">
       </form>
     </section>
