did some JS clean up, still need to work on CSS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Giphy Finder</title>
   </head>
   <body>
+    <header>
+      Giphy: Hip-Hop Gif Finder
+    </header>
     <section id="btn-list">
-
     </section>
     <section id="input-area">
       <form>
