--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   </head>
   <body>
     <header>
-      Giphy: Hip-Hop Gif Finder
+      Giphy API: Reaction Gif Finder
     </header>
     <section id="btn-list">
     </section>
     <section id="input-area">
       <form>
-        <input id="input-text" type="text" value="Hip Hop Artists">
-        <input type="submit" value="Search Giphy">
+        <input id="input-text" type="text" value="Enter Your Emotion">
+        <input type="submit" value="Add Button">
       </form>
     </section>
     <section id="results">
@@ -26,4 +26,5 @@
     </section>
   </body>
   <script src="assets/javascript/app.js" type="text/javascript"></script>
+  <script>$(document).ready(readyFunc);</script>
 </html>
